# sourcerer

./: .commitlintrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: pre-commit
sourcerer/: CHANGELOG.md  Cargo.toml  README.md
sourcerer-derive/: CHANGELOG.md  Cargo.toml  README.md
sourcerer-derive/src/: lib.rs
sourcerer/src/: cloudevent.rs  lib.rs  repository.rs  snapshot.rs  upcaster.rs
sourcerer/src/store/: in_memory.rs  in_memory_snapshot.rs  mod.rs  sled.rs  sled_snapshot.rs  sqlx_postgres.rs
sourcerer/tests/: core.rs  derive.rs
